# llm-meter

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: README.md  architecture.md  cli.md  configuration.md  development.md  troubleshooting.md  tui.md
scripts/: run-app.sh  test-local.sh
src/: config.rs  error.rs  main.rs  models.rs  pricing.rs  service.rs  storage.rs
src/providers/: anthropic.rs  mod.rs  openai.rs
src/ui/: app.rs  mod.rs  run.rs
tests/: cli.rs
