[package]
name = "llm-meter"
version = "0.1.0"
edition = "2021"
description = "A clean TUI for online LLM token and cost monitoring"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
crossterm = "0.28"
directories = "5.0"
keyring = "3.6"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
url = "2.5"

[dev-dependencies]
tempfile = "3.15"
